--- a/SeleniumEasyTestAutomation/pom.xml
+++ b/SeleniumEasyTestAutomation/pom.xml
@@ -99,6 +99,13 @@
 		    <artifactId>selenium-support</artifactId>
 		    <version>3.141.59</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>com.googlecode.json-simple</groupId>
+		    <artifactId>json-simple</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
+
 
 	</dependencies>
 
