--- a/SeleniumEasyTestAutomation/pom.xml
+++ b/SeleniumEasyTestAutomation/pom.xml
@@ -106,6 +106,12 @@
 		    <version>1.1.1</version>
 		</dependency>
 
+		<dependency>
+		    <groupId>io.github.bonigarcia</groupId>
+		    <artifactId>webdrivermanager</artifactId>
+		    <version>4.3.1</version>
+		</dependency>
+
 
 	</dependencies>
 
