--- a/SeleniumEasyTestAutomation/pom.xml
+++ b/SeleniumEasyTestAutomation/pom.xml
@@ -107,10 +107,11 @@
 		</dependency>
 
 		<dependency>
-		    <groupId>io.github.bonigarcia</groupId>
-		    <artifactId>webdrivermanager</artifactId>
-		    <version>4.3.1</version>
+		    <groupId>com.relevantcodes</groupId>
+		    <artifactId>extentreports</artifactId>
+		    <version>2.41.2</version>
 		</dependency>
+
 
 
 	</dependencies>
