--- a/SeleniumEasyTestAutomation/pom.xml
+++ b/SeleniumEasyTestAutomation/pom.xml
@@ -12,9 +12,55 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <aspectj.version>1.8.10</aspectj.version>
+    
+    
   </properties>
   
-  
+  <build>
+  	<plugins>
+  		<plugin>
+  			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-compiler-plugin</artifactId>
+   			<configuration>
+  				<source>1.8</source>
+  				<taget>1.8</taget>
+  			</configuration>
+  			
+  		</plugin>
+		 <plugin>
+		  <groupId>org.apache.maven.plugins</groupId>
+		  <artifactId>maven-site-plugin</artifactId>
+		  <version>3.9.1</version>
+		</plugin>
+		<plugin>
+		  <groupId>org.apache.maven.plugins</groupId>
+		  <artifactId>maven-project-info-reports-plugin</artifactId>
+		  <version>3.1.1</version>
+		</plugin>
+		 
+  		<plugin>
+  			<groupId>org.apache.maven.plugins</groupId>
+    		<artifactId>maven-surefire-plugin</artifactId>
+    		<version>2.20</version>
+  			<configuration>
+  				<suiteXMLFiles>
+  					<suiteXMLFile>/SeleniumEasyTestAutomation/testng.xml</suiteXMLFile>
+  				</suiteXMLFiles>
+  				<argLine>
+                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                </argLine>
+  			</configuration>
+  			<dependencies>
+				 <dependency>
+				    <groupId>org.aspectj</groupId>
+				    <artifactId>aspectjweaver</artifactId>
+				    <version>1.9.6</version>
+				</dependency>
+			</dependencies> 
+  		</plugin>
+ 	 </plugins>
+  </build>
 
   <dependencies>
 
@@ -31,7 +77,8 @@
 			
 		</dependency>
 
-
+		
+		
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
@@ -76,6 +123,7 @@
 		</dependency>
 
 		
+		
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
@@ -106,10 +154,24 @@
 		    <version>1.1.1</version>
 		</dependency>
 
+		
 		<dependency>
-		    <groupId>com.relevantcodes</groupId>
-		    <artifactId>extentreports</artifactId>
-		    <version>2.41.2</version>
+		    <groupId>io.qameta.allure</groupId>
+		    <artifactId>allure-testng</artifactId>
+		    <version>2.13.8</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+		<dependency>
+		    <groupId>io.github.bonigarcia</groupId>
+		    <artifactId>webdrivermanager</artifactId>
+		    <version>4.3.1</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+		<dependency>
+		    <groupId>org.aspectj</groupId>
+		    <artifactId>aspectjweaver</artifactId>
+		    <version>1.8.10</version>
 		</dependency>
 
 
